fix(config): align map label on the right

--- a/_sass/pages/_gallery.scss
+++ b/_sass/pages/_gallery.scss
@@ -135,6 +135,7 @@
 
   .gallery-photo-map {
     flex: none;
+    margin-left: auto;
     color: inherit;
 
     &:hover {
